styles: Avoid misalignments when line numbering is disabled
Ref: https://defensivecss.dev/tip/flexbox-min-content-size/

Bug: T381714
(cherry picked from commit 6804aca2719ba4ec513282d0627ae89e30ade313)

--- a/resources/ve-cm/ve.ui.CodeMirror.v6.less
+++ b/resources/ve-cm/ve.ui.CodeMirror.v6.less
@@ -67,6 +67,9 @@
 
 	.cm-content {
 		padding: 0;
+		// T381714: Disable the automatic minimum size, so it can shrink
+		// See https://www.w3.org/TR/css-flexbox-1/#min-size-auto
+		min-width: 0;
 	}
 
 	.CodeMirror-selected {
